kubernetes/argocd/apps/workloads/tidewood-booking/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tidewood-booking
  namespace: tidewood-booking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "tidewood.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: tidewood-booking
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: "tidewood.alexispaul.net"
      http:
        paths:
          - backend:
              service:
                name: tidewood-booking
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tidewood.paulynomial.com
      secretName: tidewood-paulynomial-com-tls
    - hosts:
        - tidewood.alexispaul.net
      secretName: tidewood-alexispaul-net-tls
